# atlassian-internalized

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
docs/: internalization-log.md
skills/atlassian-jira/: README.md
skills/atlassian-jira/examples/: get_issue_basic.json  get_issue_no_comments.json  get_issue_specific_fields.json  get_issue_with_changelog.json
skills/atlassian-jira/scripts/: execute_tool.py
skills/atlassian-skills/scripts/: execute_tool.py
src/atlassian_tools/: __init__.py
src/atlassian_tools/_core/: __init__.py  base.py  config.py  container.py  exceptions.py  executor.py  http_client.py  registry.py
src/atlassian_tools/confluence/: __init__.py  models.py  service.py  tools.py
src/atlassian_tools/jira/: __init__.py  models.py  service.py  tools.py
tests/integration/: __init__.py  test_jira_integration.py
tests/unit/: __init__.py  test_base.py  test_config.py  test_container.py  test_executor.py  test_final_100_percent.py  test_final_edge_cases.py  test_http_client.py  test_not_found_errors.py  test_registry.py
tests/unit/confluence/: test_service.py  test_tools.py
tests/unit/jira/: __init__.py  test_models.py  test_service.py  test_service_edge_cases.py  test_tools.py  test_tools_error_handling.py  test_tools_p0.py  test_tools_remaining.py
